--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/chatbot.py": {
-      "runtime": "python3.9"
+      "runtime": "python@3.9"
     }
   },
   "routes": [
